* Set focus on search entry after search
* Support language suffix in CSV export
* Close tab with mouse middle click
* Support language suffix in CSV import

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Read xxx2Many fields using the dotted notation
* Display XML ID on Log window
* Use operators when converting PYSON to string
* Add DnD on binary and image widgets
* Allow resetting forgotten password

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Support create record from autocomplete
* Use grid layout for form container
* Support scanning code
* Reset search offset when domain has changed
* Add a canonicalize function for domains
* Add menu to copy selected record from tree view to clipboard
* Support PYSON comparison of timedelta
* Support encoding timedelta into PYSON TimeDelta
* Eagerly read string value of multiselection fields
* Use locale timezone for CSV in locale format

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Include events to logs
* Support scroll time on calendar view
* Save and Restore tree state on List Form
* Do record (pre)validation and saving on selection change for list-form views
* Eagerly read string value of selection fields
* Do not select first record by default
* Use ``&`` and ``|`` as boolean operator in search widget
* Use toggle button and label on translate dialog
* Support border type of images
* Manage domain on id in single value list as unique
* Do not validate domain nor enforce uniqueness for empty fields unless they're required or invisible
* Display the number of selected records on xxx2Many

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Support authentication services
* Check server version

Version 6.4.0 - 2022-05-02
* Bug fixes (see mercurial logs for details)
* Support notification message