@@ -1,3 +1,4 @@
+* Allow resizing the attachment preview panel
 * Set focus on search entry after search
 * Support language suffix in CSV export
 * Close tab with mouse middle click
